# local-market-agent

./: .env.example  .gitignore  PROJECT_NOTES.md  README.md  ROADMAP.md  pyproject.toml  render.yaml
market_agent/: __init__.py  agent.py  cli.py  config.py  geo.py  keywords.py  models.py  regulation_areas.py  screener.py  server.py
market_agent/analysis/: openai_analyzer.py  rule_engine.py
market_agent/collectors/: __init__.py  base.py  data_go_kr.py  demo.py  ecos.py  kakao_places.py  molit.py  molit_rent.py  naver.py  regulation.py
market_agent/static/: styles.css
market_agent/templates/: index.html  screen.html
tests/: test_ecos.py  test_keywords.py  test_molit.py  test_molit_rent.py  test_naver_collector.py  test_regulation_areas.py  test_rule_engine.py  test_screener.py
